2004-01-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Quiten errors in checkDone. If an error occurs,
	we'll move along to fetchPage for a retry.
	* tkchat.tcl:  Added scrollbar to the online users window and made
	this widget word wrap.

2003-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied fix from dgp for bug #849829. 

2003-10-08  Pascal Scheffers  <pascal@scheffers.net>
	
	* tkchat.tcl: Updated irc online users listing by asking ircbridge
	for 'onlineusers' automatically after login. 
	
2003-09-26  Pascal Scheffers for Joe Mistachkin <joe@mistachkin.com>
		
	* tkchat.tcl: Several bug fixes for the /alias system

2003-09-25  Pascal Scheffers for Joe Mistachkin <joe@mistachkin.com>
		
	* tkchat.tcl: Added dynamic command aliasses with /alias and
	/unalias and help to the about dialog.

2003-09-25  Pascal Scheffers  <pascal@scheffers.net>
	
	* tkchat.tcl: Added 'google this' and 'cancel' to the bookmarks
	context menu.

2003-09-25  Pascal Scheffers  <pascal@scheffers.net>
	
	* tkchat.tcl: Added loading of $HOME/.tkchatrc.tcl (if it exists)
	to allow users change GUI settings add proc, etc. (David Zolli aka
	kroc wants to do this for XFce) 
	
2003-09-24  Pascal Scheffers  <pascal@scheffers.net>
	
	* tkchat.tcl: Added functions and regular expressions to list the
	users who are online on the IRC side of the chat (purely based on
	ircbridge joins/leaves/isnowknowas messages)

2003-09-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added support for placing bookmarks and cycling
	between marks. See the context menu (Button-3).
	* tkchat.tcl: Added a /see command to move the text window to the
	given mark or index. eg: /see end, /see 0.0 or /see bookmark1

2003-09-20  Donal K. Fellows  <dkf@users.sf.net>

	* tkchat.tcl (UserInfoDialog,UserInfoParseCallback): Made code
	robust enough to deal with semi-malicious user info.

2003-09-19  Pat Thoyts  <patthoyts@users.sourceforge.net>
